--- a/style/scss/_skills.scss
+++ b/style/scss/_skills.scss
@@ -32,9 +32,8 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-
     gap: 10px;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
   }
 
@@ -45,7 +44,8 @@
 
   &__icon {
     width: 100%;
-
+    height: 5rem;
+    object-fit: contain;
     filter: grayscale(100%);
   }
 
@@ -79,6 +79,7 @@
 
     &__icon {
       width: 100px;
+      height: 7rem;
     }
   }
 }
